# flask-app-template

./: .gitignore  LICENSE  README.md  cookiecutter.json  pyproject.toml
migrations/versions/: a29ea7851b68_initial_user_setup.py
{{ cookiecutter.app }}/: CHANGELOG.md  Dockerfile  LICENSE  README.md  Tiltfile  boot.sh  config.py  pyproject.toml  {{ cookiecutter.app }}.py
{{ cookiecutter.app }}/app/: __init__.py  models.py
{{ cookiecutter.app }}/app/api/: users.py
{{ cookiecutter.app }}/app/auth/: email.py
{{ cookiecutter.app }}/app/main/: forms.py  routes.py
{{ cookiecutter.app }}/app/templates/: base.html  index.html  user.html
{{ cookiecutter.app }}/app/templates/auth/: login.html  register.html  reset_password.html  reset_password_request.html
{{ cookiecutter.app }}/app/templates/errors/: 404.html  500.html
{{ cookiecutter.app }}/local_dev/: local.yaml
